[package]
name = "bmp180-driver"
version = "0.1.0"
authors = ["Rafael Milewski <rafael.milewski@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

#[features]
#default = ["std", "embassy", "esp-idf-svc/native"]
#
#pio = ["esp-idf-svc/pio"]
#std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
#alloc = ["esp-idf-svc/alloc"]
#nightly = ["esp-idf-svc/nightly"]
#embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", features = ["std"] }
esp-idf-svc = { version = "0.48", features = ["native", "binstart"] }
embedded-hal = "1.0.0"
libm = "0.2.8"

[build-dependencies]
embuild = "0.31"
