[package]
name = "esp32-bmp180-example"
version = "0.0.0"
authors = ["Rafael Milewski <rafael.milewski@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
esp-idf-svc = { version = "0.48", features = ["native", "binstart"] }
bmp180-driver = { path = "../.." }

[build-dependencies]
embuild = "0.31"
